--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
           
+      - name: Install npm dependencies
+        run: npm install
+        
+      - name: Run build task
+        run: ng build --prod
+          
       - name: Deploy to Staging server
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
