--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm install
         
       - name: Run build task
-        run: ng build --prod
+        run: npm run build -- --prod
           
       - name: Deploy to Staging server
         uses: easingthemes/ssh-deploy@v2.1.5
