--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
           SOURCE: "dist/"
           REMOTE_HOST: 67.149.193.68 #${{ secrets.REMOTE_HOST }}
           REMOTE_USER: github_deploy #${{ secrets.REMOTE_USER }}
-          TARGET: /jqmittech/dist #/${{ secrets.REMOTE_TARGET }}
+          TARGET: /var/www/jqmittech/dist #/${{ secrets.REMOTE_TARGET }}
