--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO"
-          SOURCE: "dist/"
+          SOURCE: "dist/HomeDashboard/"
           REMOTE_HOST: 67.149.193.68 #${{ secrets.REMOTE_HOST }}
           REMOTE_USER: github_deploy #${{ secrets.REMOTE_USER }}
           TARGET: /var/www/jqmittech/dist #/${{ secrets.REMOTE_TARGET }}
