--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO"
           SOURCE: "dist/HomeDashboard/"
-          REMOTE_HOST: 67.149.193.68 #${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: github_deploy #${{ secrets.REMOTE_USER }}
-          TARGET: /var/www/jqmittech/dist #/${{ secrets.REMOTE_TARGET }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: /${{ secrets.REMOTE_TARGET }}
